--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+app.jwt-secret=${JWT_SECRET}
+app.jwt-expiration-ms=${JWT_EXPIRATION_MS}
+app.jwt-refresh-expiration-ms=${JWT_REFRESH_EXPIRATION_MS}
+
